WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269310
REGRESSION(
274325@main
): didFindString is always false when searching in PDFs
https://bugs.webkit.org/show_bug.cgi?id=269310
Summary
REGRESSION(274325@main): didFindString is always false when searching in PDFs
Charlie Wolfe
Reported
2024-02-13 11:57:32 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-13 11:57:56 PST
<
rdar://problem/122901465
>
Charlie Wolfe
Comment 2
2024-02-13 12:00:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24361
EWS
Comment 3
2024-02-13 15:19:14 PST
Committed
274585@main
(2db6785ed8ff): <
https://commits.webkit.org/274585@main
> Reviewed commits have been landed. Closing PR #24361 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug