REGRESSION(274325@main): didFindString is always false when searching in PDFs rdar://122901465 https://bugs.webkit.org/show_bug.cgi?id=269310

Reviewed by Sammy Gill.

After 274325@main, API::FindClient::didFindString() is called in the completion handler of the final
FindString message if a match was found inside a frame. For PDFs, this frame ID was never set, so
didFindString would never be called. For now, if a match is found in a PDF, mark the main frame as the
frame containing the match.

* Source/WebKit/WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::findString):

Canonical link: https://commits.webkit.org/274585@main